--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.6",
     "@next/font": "13.1.4",
+    "@splinetool/react-spline": "^2.2.5",
+    "@splinetool/runtime": "^0.9.210",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
     "framer-motion": "^8.5.4",
