--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.6",
     "@next/font": "13.1.4",
+    "@react-three/drei": "^9.56.24",
+    "@react-three/fiber": "^8.11.0",
+    "@splinetool/loader": "^0.9.210",
+    "@splinetool/r3f-spline": "^1.0.2",
     "@splinetool/react-spline": "^2.2.5",
     "@splinetool/runtime": "^0.9.210",
     "eslint": "8.32.0",
@@ -22,6 +26,7 @@
     "next": "13.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "three": "^0.149.0",
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
