--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@splinetool/r3f-spline": "^1.0.2",
     "@splinetool/react-spline": "^2.2.5",
     "@splinetool/runtime": "^0.9.210",
+    "animate.css": "^4.1.1",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
     "framer-motion": "^8.5.5",
