--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "18.2.0",
     "react-awesome-reveal": "^4.2.3",
     "react-dom": "18.2.0",
+    "react-parallax-tilt": "^1.7.107",
     "three": "^0.149.0",
     "typewriter-effect": "^2.19.0"
   },
