--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-awesome-reveal": "^4.2.3",
     "react-dom": "18.2.0",
     "react-parallax-tilt": "^1.7.107",
+    "react-scroll-parallax": "^3.3.2",
     "three": "^0.149.0",
     "typewriter-effect": "^2.19.0"
   },
