--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-parallax-tilt": "^1.7.107",
     "react-responsive-masonry": "^2.1.7",
     "react-scroll-parallax": "^3.3.2",
+    "react-use-scroll-snap": "^0.0.4",
     "styled-components": "^5.3.6",
     "three": "^0.149.0",
     "typewriter-effect": "^2.19.0"
