--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-use-scroll-snap": "^0.0.4",
     "styled-components": "^5.3.6",
     "three": "^0.149.0",
-    "typewriter-effect": "^2.19.0"
+    "typewriter-effect": "^2.19.0",
+    "yet-another-react-lightbox": "^3.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
