--- a/package.json
+++ b/package.json
@@ -23,17 +23,17 @@
     "@splinetool/runtime": "^0.9.233",
     "animate.css": "^4.1.1",
     "eslint": "8.32.0",
-    "eslint-config-next": "13.1.4",
+    "eslint-config-next": "^13.5.6",
     "framer-motion": "^8.5.5",
-    "next": "13.1.4",
-    "react": "18.2.0",
+    "next": "^13.5.6",
+    "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.3",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-parallax-tilt": "^1.7.107",
     "react-responsive-masonry": "^2.1.7",
     "react-scroll-parallax": "^3.3.2",
     "react-use-scroll-snap": "^0.0.4",
-    "styled-components": "^5.3.10",
+    "styled-components": "^6.1.0",
     "three": "^0.149.0",
     "typewriter-effect": "^2.19.0",
     "word-wrap": "^1.2.5",
