--- a/package.json
+++ b/package.json
@@ -9,38 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.5",
-    "@headlessui/react": "^1.7.13",
-    "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.6",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@headlessui/react": "^1.7.18",
+    "@mui/icons-material": "^5.15.5",
+    "@mui/material": "^5.15.5",
     "@react-three/drei": "^9.56.24",
-    "@react-three/fiber": "^8.11.0",
+    "@react-three/fiber": "^8.15.14",
     "@splinetool/loader": "^0.9.210",
     "@splinetool/r3f-spline": "^1.0.2",
     "@splinetool/react-spline": "^2.2.5",
     "@splinetool/runtime": "^0.9.233",
     "animate.css": "^4.1.1",
-    "eslint": "8.32.0",
-    "eslint-config-next": "^13.5.6",
+    "eslint": "^8.32.0",
+    "eslint-config-next": "^14.1.0",
     "framer-motion": "^8.5.5",
-    "next": "^13.5.6",
+    "next": "^14.1.0",
     "react": "^18.2.0",
-    "react-awesome-reveal": "^4.2.3",
+    "react-awesome-reveal": "^4.2.7",
     "react-dom": "^18.2.0",
-    "react-parallax-tilt": "^1.7.107",
+    "react-parallax-tilt": "^1.7.191",
     "react-responsive-masonry": "^2.1.7",
-    "react-scroll-parallax": "^3.3.2",
+    "react-scroll-parallax": "^3.4.5",
     "react-use-scroll-snap": "^0.0.4",
-    "styled-components": "^6.1.0",
+    "styled-components": "^6.1.8",
     "three": "^0.149.0",
-    "typewriter-effect": "^2.19.0",
+    "typewriter-effect": "^2.21.0",
     "word-wrap": "^1.2.5",
     "yet-another-react-lightbox": "^3.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.6"
+    "tailwindcss": "^3.4.1"
   }
 }
