--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "yet-another-react-lightbox": "^3.4.0"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.4.1"
