build not breaking -- pre updating xferable skills gallery

--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@headlessui/react": "^1.7.19",
-    "@mui/icons-material": "^5.15.20",
-    "@mui/material": "^5.15.20",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@headlessui/react": "^2.1.2",
+    "@mui/icons-material": "^5.16.5",
+    "@mui/material": "^5.16.5",
     "@react-three/drei": "^9.107.0",
     "@react-three/fiber": "^8.16.8",
     "@splinetool/loader": "^0.9.526",
@@ -21,23 +21,24 @@
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^0.9.526",
     "animate.css": "^4.1.1",
+    "braces": "^3.0.3",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.4",
     "framer-motion": "^8.5.5",
     "next": "^14.2.4",
     "react": "^18.3.1",
-    "react-awesome-reveal": "^4.2.12",
+    "react-awesome-reveal": "^4.2.13",
     "react-dom": "^18.3.1",
     "react-parallax-tilt": "^1.7.229",
-    "react-responsive-masonry": "^2.2.0",
+    "react-responsive-masonry": "^2.3.0",
     "react-scroll-parallax": "^3.4.5",
     "react-use-scroll-snap": "^0.0.4",
     "sharp": "^0.33.4",
-    "styled-components": "^6.1.11",
+    "styled-components": "^6.1.12",
     "three": "^0.149.0",
     "typewriter-effect": "^2.21.0",
     "word-wrap": "^1.2.5",
-    "yet-another-react-lightbox": "^3.20.0"
+    "yet-another-react-lightbox": "^3.21.1"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
